--- a/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
@@ -2,32 +2,43 @@
 <resources>
   <!-- MIUI 10 valmis -->
   <string name="app_name">miot-device-lib</string>
-     <string name="book_arr_city">目的地</string>
-     <string name="book_dep_city">出发地</string>
-     <string name="didi_app_name">DiDi</string>
-     <string name="express_setting_other">Muu</string>
-     <string name="miot_device_add_device">添加设备</string>
-     <string name="miot_device_all_device">全部设备</string>
-     <string name="miot_device_cancel">取消</string>
-     <string name="miot_device_card_title">Mi Home</string>
-     <string name="miot_device_cta_and">及</string>
-     <string name="miot_device_cta_message">将智能设备添加至此，实现快捷操控。如您点击“授权开启”则表示您同意米家APP</string>
-     <string name="miot_device_cta_priv">隐私协议</string>
-     <string name="miot_device_cta_use_info">使用条款</string>
-     <string name="miot_device_edit">编辑</string>
-     <string name="miot_device_empty_text">添加空气净化器、摄像机、扫地机器人等智能设备，实现快捷操控。</string>
-     <string name="miot_device_install_mijia">去下载</string>
-     <string name="miot_device_introduction">实现智能设备快捷操控</string>
-     <string name="miot_device_loading">数据加载中</string>
-     <string name="miot_device_login">去登录</string>
-     <string name="miot_device_mijia_logout_message">添加和使用设备前，需要先登录小米账号。是否去登录？</string>
-     <string name="miot_device_mijia_logout_title">账号未登录</string>
-     <string name="miot_device_mijia_uninstall_message">您的手机尚未安装“米家APP”，因此无法启用相关功能。是否去应用商店下载？</string>
-     <string name="miot_device_mijia_uninstall_title">尚未安装</string>
-     <string name="miot_device_network_error">当前网络未连接</string>
-     <string name="miot_device_shrink_list">收起列表</string>
-     <string name="net_unavailable">Verkkoyhteyttä ei voitu muodostaa.</string>
-     <!-- MIUI 10 valmis -->
+  <string name="app_setting">信息助手设置</string>
+  <string name="app_setting_add_header_bg">添加头部背景图</string>
+  <string name="app_setting_datetime">日期显示</string>
+  <string name="app_setting_dialog_cancel">取消</string>
+  <string name="app_setting_has_not_setted">未设置</string>
+  <string name="app_setting_has_setted">已设置</string>
+  <string name="app_setting_more_setting">更多设置</string>
+  <string name="app_setting_on_off_setting">开关设置</string>
+  <string name="app_setting_privacy_policy">Privacy Policy</string>
+  <string name="app_setting_search">搜索框</string>
+  <string name="app_setting_xiaoai">小爱同学按钮</string>
+  <string name="book_arr_city">目的地</string>
+  <string name="book_dep_city">出发地</string>
+  <string name="didi_app_name">DiDi</string>
+  <string name="express_setting_other">Muu</string>
+  <string name="miot_device_add_device">添加设备</string>
+  <string name="miot_device_all_device">全部设备</string>
+  <string name="miot_device_cancel">取消</string>
+  <string name="miot_device_card_title">Mi Home</string>
+  <string name="miot_device_cta_and">及</string>
+  <string name="miot_device_cta_message">将智能设备添加至此，实现快捷操控。如您点击“授权开启”则表示您同意米家APP</string>
+  <string name="miot_device_cta_priv">隐私协议</string>
+  <string name="miot_device_cta_use_info">使用条款</string>
+  <string name="miot_device_edit">编辑</string>
+  <string name="miot_device_empty_text">添加空气净化器、摄像机、扫地机器人等智能设备，实现快捷操控。</string>
+  <string name="miot_device_install_mijia">去下载</string>
+  <string name="miot_device_introduction">实现智能设备快捷操控</string>
+  <string name="miot_device_loading">数据加载中</string>
+  <string name="miot_device_login">去登录</string>
+  <string name="miot_device_mijia_logout_message">添加和使用设备前，需要先登录小米账号。是否去登录？</string>
+  <string name="miot_device_mijia_logout_title">账号未登录</string>
+  <string name="miot_device_mijia_uninstall_message">您的手机尚未安装“米家APP”，因此无法启用相关功能。是否去应用商店下载？</string>
+  <string name="miot_device_mijia_uninstall_title">尚未安装</string>
+  <string name="miot_device_network_error">当前网络未连接</string>
+  <string name="miot_device_shrink_list">收起列表</string>
+  <string name="net_unavailable">Verkkoyhteyttä ei voitu muodostaa.</string>
+  <!-- MIUI 10 valmis -->
   <string name="access_change_text" formatted="false">当前选中的是第%d项, 与第%d项交换位置.</string>
   <string name="access_select">Valittiin %s</string>
   <string name="access_unselect">Poistettiin valinta %s</string>
@@ -55,8 +66,13 @@
   <string name="agenda_assistant_payment_day">Maksupäivä</string>
   <string name="agenda_assistant_repayment_day">Maksupäivä</string>
   <string name="agenda_assistant_tail_num">Numero</string>
+  <string name="agenda_disclaimer">免责声明</string>
+  <string name="agenda_disclaimer_content">本服务由支付宝提供。相关服务和责任将由该第三方承担。如有问题请咨询该公司客服。</string>
+  <string name="agenda_i_known">我知道了</string>
+  <string name="agenda_need_install_alipay">该功能需要安装支付宝后使用</string>
   <string name="agenda_no_title">(Nimetön)</string>
   <string name="agenda_open">Ota agendan muistutukset käyttöön</string>
+  <string name="agenda_pay_is_not_available">支付服务不可用</string>
   <string name="agenda_setting_brief">Tapahtumat, maksumuistutukset ja muuta</string>
   <string name="agenda_setting_brief_detail">Näytä suunnitellut tapahtumat, vastaanota muistutuksia luottokortin laskuista ja lainan takaisinmaksuista.</string>
   <string name="agenda_settings_account">Hallitse kalenteritilejä</string>
@@ -491,7 +507,6 @@
   <string name="empty_recharge_card_title">Ei tietoa</string>
   <string name="entrance">Korttien pikakuvakkeet</string>
   <string name="error_share_not_support">Tällaisia kohteita ei tueta suosikeissa.</string>
-  <string name="exapress_save_address_to_contact">Tallenna tämä osoite Yhteystietoihin</string>
   <string name="exception_network_error_check_network">网络无法连接</string>
   <string name="exception_network_error_retry">网络出错，请稍后再试</string>
   <string name="exception_network_error_wait_retry">网络无法连接,请稍后再试</string>
@@ -504,22 +519,13 @@
   <string name="express_add_new_address">Lisää osoite</string>
   <string name="express_add_tel">添加电话</string>
   <string name="express_address_delete_warning">Poistetaanko tämä osoite?</string>
-  <string name="express_address_deleted">Osoite poistettu</string>
-  <string name="express_address_info">Osoitetiedot</string>
-  <string name="express_address_name">Nimi</string>
-  <string name="express_address_region">Alue</string>
-  <string name="express_address_warning_no_area">Alue vaaditaan</string>
-  <string name="express_address_warning_no_full_address">Osoite vaaditaan</string>
-  <string name="express_address_warning_no_name">Nimi vaaditaan</string>
-  <string name="express_address_warning_no_phone">Puhelin vaaditaan</string>
   <string name="express_addressee_info">Vastaanottajan tiedot</string>
   <string name="express_addressee_name">Vastaanottajan nimi</string>
-  <string name="express_addressee_region">Vastaanottajan alue</string>
+  <string name="express_app_store_not_found">Mi Markettia ei löytynyt</string>
   <string name="express_auth_button_text">添加手机号</string>
   <string name="express_authorized">Sallittu</string>
   <string name="express_banner_header">%1$s / Seurantanumero</string>
   <string name="express_booking_txt">Tilaa pikatoimitus</string>
-  <string name="express_cainiao_banner">Tarjoaja Cainiao</string>
   <string name="express_cancel_order">Peruuta</string>
   <string name="express_code_txt">Koodi:</string>
   <string name="express_company_list_empty">Ei yrityksiä</string>
@@ -538,6 +544,7 @@
   <string name="express_delete_tel">删除电话</string>
   <string name="express_delivery">Toimitetaan</string>
   <string name="express_dest_city_label">Määränpää</string>
+  <string name="express_detail_order_number_prefix">Numero: %s</string>
   <string name="express_detailed_address">Osoite</string>
   <string name="express_field_empty">Tyhjä</string>
   <string name="express_go_back">Takaisin</string>
@@ -546,6 +553,7 @@
   <string name="express_icon_tip_link">Tietoturva &amp; yksityisyys</string>
   <string name="express_inqiury_select_logistics">Kuljetuspalvelu</string>
   <string name="express_inquiry">Seurataan</string>
+  <string name="express_inquiry_all_logistics">Kaikki</string>
   <string name="express_inquiry_and_send">Seurataan ja lähetetään</string>
   <string name="express_inquiry_button_text">Seuraa</string>
   <string name="express_inquiry_clipboard_number_message">Seurataanko kopioitua numeroa?</string>
@@ -556,6 +564,7 @@
   <string name="express_inquiry_delivered">Toimitettu</string>
   <string name="express_inquiry_detail">Pikatoimituksen tiedot</string>
   <string name="express_inquiry_edit_logistics">Kuljetusyhtiö</string>
+  <string name="express_inquiry_frequently_used_logistics">Usein käytetty</string>
   <string name="express_inquiry_history">Historia</string>
   <string name="express_inquiry_history_remark">Kommentit</string>
   <string name="express_inquiry_history_remark_hint">Kommenttien historia</string>
@@ -572,26 +581,14 @@ Tarkista seurantanumero."</string>
 Tarkista seurantanumerosi."</string>
   <string name="express_inquiry_provider_info">"Powered by "</string>
   <string name="express_inquiry_serial_number_indication">Seurantanumero</string>
-  <string name="express_inquiry_serial_number_prefix">Numero: %s</string>
-  <string name="express_inquiry_status_delivered">Toimitettu</string>
-  <string name="express_inquiry_status_difficult_goods">Tuntematon</string>
-  <string name="express_inquiry_status_dispatch">Lähetetään</string>
-  <string name="express_inquiry_status_on_the_way">Matkalla</string>
-  <string name="express_inquiry_status_receipted">Vastaanotettu</string>
-  <string name="express_inquiry_status_return">Palautettu</string>
-  <string name="express_inquiry_status_sign_out">Hylätty</string>
-  <string name="express_inquiry_status_unknown">Tuntematon</string>
-  <string name="express_install_cainiao_description">%s vaatii Cainiao -sovelluksen asentamisen. Asennetaanko nyt?</string>
-  <string name="express_install_cainiao_hidden">Älä näytä uudelleen</string>
-  <string name="express_install_cainiao_not_found">Mi Markettia ei löytynyt</string>
-  <string name="express_install_cainiao_ok">Asenna</string>
-  <string name="express_install_cainiao_title">Asenna Cainiao</string>
-  <string name="express_install_delivery_service">Seuraa tilauksiasi, ota yhteyttä toimittajaan ja paljon muuta.</string>
   <string name="express_install_open_locker">Avaa</string>
   <string name="express_install_order_detail">Näytä tilaustiedot</string>
+  <string name="express_install_provider_app_description">%1$s vaatii %2$s sovelluksen asentamista. Asennetaanko nyt?</string>
+  <string name="express_install_provider_app_hidden">Älä näytä uudelleen</string>
+  <string name="express_install_provider_app_ok">Asenna</string>
+  <string name="express_install_provider_app_title">Asenna %s</string>
   <string name="express_install_schedule_delivery">Tilaa kuljetuspalvelu</string>
   <string name="express_jd">JD</string>
-  <string name="express_location_failed">Sinua ei voitu paikantaa. Syötä osoitteesi.</string>
   <string name="express_mi_shop">Mi Kauppa</string>
   <string name="express_more_service">Lisää palveluita</string>
   <string name="express_no_address">Tyhjä</string>
@@ -624,16 +621,18 @@ Tarkista seurantanumerosi."</string>
   <string name="express_order_state_unknown">Tuntematon</string>
   <string name="express_order_state_wait_picking">Odotetaan poimintaa</string>
   <string name="express_order_succeeded">Valmis</string>
-  <string name="express_order_success_hint">%s toimittaa tilauksesi</string>
   <string name="express_origin_prev">Lähettäjä</string>
   <string name="express_other_app">Salli MIUI:n käyttää toisten sovelluksien tilaustietoja.</string>
   <string name="express_phone">Puhelin</string>
   <string name="express_phone_tip">Toimitetaan, pysy kuulolla</string>
   <string name="express_pickup_code">取件码: %s</string>
   <string name="express_preview_order">Esikatselu</string>
+  <string name="express_provider_banner">Palvelun tarjoaa %s</string>
+  <string name="express_provider_cainiao">Cainiao</string>
+  <string name="express_provider_jingdong">Jingdong</string>
+  <string name="express_provider_shunfeng">Shunfeng</string>
   <string name="express_region_pick_title">Valitse alue</string>
   <string name="express_schedule_delivery">预约取件</string>
-  <string name="express_select_address">Osoite</string>
   <string name="express_select_addressee">Vastaanottaja</string>
   <string name="express_select_city">Valitse kaupunki</string>
   <string name="express_select_sender">Lähettäjä</string>
@@ -643,7 +642,6 @@ Tarkista seurantanumerosi."</string>
   <string name="express_send_notice">Kielletyt asiat</string>
   <string name="express_sender_info">Lähettäjän tiedot</string>
   <string name="express_sender_name">Lähettäjän nimi</string>
-  <string name="express_sender_region">Lähettäjän alue</string>
   <string name="express_setting_add_new_number">添加新号码</string>
   <string name="express_setting_add_other_number">其他号码</string>
   <string name="express_setting_authorized_number">Vahvistettu puhelinnumero</string>
@@ -693,6 +691,18 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="express_setting_verify_success">Vahvistettiin onnistuneesti</string>
   <string name="express_shortcut_name">Lähetä tai seuraa pikatoimitusta</string>
   <string name="express_show_all_inquiry_history">Näytä kaikki kyselyhistoria</string>
+  <string name="express_state_abandoned">Hylätty</string>
+  <string name="express_state_accept">Lähetetty</string>
+  <string name="express_state_agent_sign">Odottaa noutoa</string>
+  <string name="express_state_canceled">Peruutettu</string>
+  <string name="express_state_create">Tilaus luotu</string>
+  <string name="express_state_delivering">Valmis toimitettavaksi</string>
+  <string name="express_state_failed">Ongelmia löytyi</string>
+  <string name="express_state_reject">Hylätty</string>
+  <string name="express_state_shipped">Toimitetaan pian</string>
+  <string name="express_state_sign">Allekirjoitettu</string>
+  <string name="express_state_transport">Matkalla</string>
+  <string name="express_state_unknown">Ei vielä tietoja</string>
   <string name="express_submit_order">Lähetä</string>
   <string name="express_support_app">Tuetut sovellukset</string>
   <string name="express_tail_number">尾号</string>
@@ -700,14 +710,12 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="express_tmall">Tmall</string>
   <string name="express_track_order">Seuraa</string>
   <string name="express_tracking_number">Seurantanumero</string>
-  <string name="express_update_cainiao_description">Päivitä Cainiao käyttääksesi tätä ominaisuutta.</string>
-  <string name="express_update_cainiao_ok">Päivitä</string>
-  <string name="express_update_cainiao_title">Cainiao versio on liian vanha</string>
+  <string name="express_update_provider_app_description">Päivitä %s käyttääksesi tätä ominaisuutta.</string>
+  <string name="express_update_provider_app_ok">Päivitä</string>
+  <string name="express_update_provider_app_title">%s versio on liian vanha</string>
   <string name="express_urge_order">Tökkää</string>
   <string name="express_view_order">Näytä tilaukset</string>
   <string name="express_view_status">Seuraa</string>
-  <string name="expresss_inquiry_all_logistics">Kaikki</string>
-  <string name="expresss_inquiry_frequently_used_logistics">Usein käytetyt</string>
   <string name="fav_category_article">Artikkelit</string>
   <string name="fav_category_shopping">Ostokset</string>
   <string name="fav_category_video">Videot</string>
@@ -842,6 +850,7 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="function_zhihu_search">Haku</string>
   <string name="function_zhihu_title">Zhihu</string>
   <string name="generate_view_failed">全国人民都来了? 稍候再试试</string>
+  <string name="go_to_pay">快速还款</string>
   <string name="go_to_school">Töihin ja töistä tai kouluun ja koulusta</string>
   <string name="greeting_alarm_desc">Herätys soi huomenna klo %1$s.</string>
   <string name="greeting_alarm_desc_with_duration">Herätys soi huomenna klo %1$s, mene nukkumaan, jotta saat %2$s edestä unta.</string>
@@ -1208,18 +1217,6 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="open_bluetooth_tips">请开启蓝牙来允许\"手环\"连接到配件</string>
   <string name="open_installed_app">Avaa</string>
   <string name="opened">Käytössä</string>
-  <string name="order_date_label">Tilauksen päivämäärä: %1$s</string>
-  <string name="order_detail">Tiedot</string>
-  <string name="order_empty_hint">Ei tilauksia</string>
-  <string name="order_id_label">Tilaus #: %1$s</string>
-  <string name="order_info">Tilaustiedot</string>
-  <string name="order_merchant_title">Tilaukseni</string>
-  <string name="order_merchant_title_format">%1$s-%2$s</string>
-  <string name="order_not_found">Ei tilauksia</string>
-  <string name="order_price_label">Tilauksen hinta: %1$s</string>
-  <string name="order_product_name_label">Tuotteen nimi: %1$s</string>
-  <string name="order_status_label">Tilauksen tila: %1$s</string>
-  <string name="order_type_recharge">Top-up</string>
   <string name="pay_card_pack">Mi Pay</string>
   <string name="paycode_parent">Alipay</string>
   <string name="paycode_sdk_parent">Maksun pikavalinta</string>
@@ -1323,7 +1320,6 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="req_no_data">Tietoja ei saatu</string>
   <string name="req_no_sdata">Tuloksia ei löytynyt</string>
   <string name="retry">Yritä uudelleen</string>
-  <string name="rmb">RMB</string>
   <string name="save_edit">Tallenna muutokset</string>
   <string name="save_to_note">转存至便签</string>
   <string name="scan">Skannaa</string>
@@ -1442,6 +1438,7 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="shopping_setting_brief">聚合和归类手机上的购物内容</string>
   <string name="shopping_setting_brief_detail">聚合各购物应用中收藏和购物车中的商品，方便查找。</string>
   <string name="shopping_setting_jingdong">京东</string>
+  <string name="shopping_setting_mishop">Mi Kauppa</string>
   <string name="shopping_setting_mishop">小米商城</string>
   <string name="shopping_setting_notification">商品添加成功后弹出通知提醒</string>
   <string name="shopping_setting_remove">撤回授权后，系统将关闭购物聚合能力，并同时移除我的购物卡片，确认撤回授权吗？</string>
@@ -1523,6 +1520,7 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="taxi_open">Näytä taksikortti</string>
   <string name="taxi_setting_brief">Hanki taksi yhdellä napautuksella.</string>
   <string name="taxi_target">Määränpää     </string>
+  <string name="tb_setting_xiaoai">小爱同学</string>
   <string name="team_selected">%s,已选中</string>
   <string name="temp_support_xiaomi">暂时仅支持小米手环</string>
   <string name="template_args_invalid">上下文参数不合法</string>
