--- a/Finnish/main/ThemeManager.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/ThemeManager.apk/res/values-fi-rFI/strings.xml
@@ -19,6 +19,15 @@
   <string name="abc_shareactionprovider_share_with">Jakaminen:</string>
   <string name="abc_shareactionprovider_share_with_application">Jaa sovelluksessa %s</string>
   <string name="abc_toolbar_collapse_description">Tiivistä</string>
+  <string name="accessibiliy_description_content_account">Profiili</string>
+  <string name="accessibiliy_description_content_ad">Mainos</string>
+  <string name="accessibiliy_description_content_add_resource">Lisää kohteita</string>
+  <string name="accessibiliy_description_content_back">Takaisin</string>
+  <string name="accessibiliy_description_content_comment">Kommentti</string>
+  <string name="accessibiliy_description_content_favorite">Lisää suosikkeihin</string>
+  <string name="accessibiliy_description_content_more">Lisää</string>
+  <string name="accessibiliy_description_content_search">Haku</string>
+  <string name="accessibiliy_description_content_share">Jaa</string>
   <string name="account_info">Tilini</string>
   <string name="account_name_not_login">Kirjaudu sisään</string>
   <string name="account_unactivated">Tili ei ole aktivoitu</string>
@@ -73,6 +82,7 @@
   <string name="description_version">Versio</string>
   <string name="description_version_szie">Versio: %1$s Koko: %2$s</string>
   <string name="desktop_wallpaper">Aloitusnäyttö</string>
+  <string name="detail_recommend_title">Suositeltu</string>
   <string name="dev_options">Kehittäjäasetukset</string>
   <string name="dev_options_summary">Verkkolähteet</string>
   <string name="download_failed">Lataaminen epäonnistui</string>
@@ -177,6 +187,27 @@
   <string name="lockscreen_wallpaper">Lukitusnäyttö</string>
   <string name="lockstyle_personal_settings">Muokkaa</string>
   <string name="mi_wallpaper">MIUI taustakuva</string>
+  <string name="miuishare_account_activate_confirmation">Aktivoi Mi Tili</string>
+  <string name="miuishare_account_activate_ok">Aktivoi</string>
+  <string name="miuishare_account_login_cancel">Peruuta</string>
+  <string name="miuishare_account_login_confirmation">Kirjaudu sisään Mi Tilille</string>
+  <string name="miuishare_account_login_ok">Kirjaudu sisään</string>
+  <string name="miuishare_account_need_activate">Weiboon jakaminen vaatii Weibo-tilin, joka on liitettynä Mi Tiliisi. Aktivoi Mi Tilisi jatkaaksesi.</string>
+  <string name="miuishare_account_need_login">Weiboon jakaminen vaatii Weibo-tilin, joka on liitettynä Mi Tiliisi. Kirjaudu sisään Mi Tiliisi jatkaaksesi.</string>
+  <string name="miuishare_app_name">MIUI Jakaminen</string>
+  <string name="miuishare_mini_program_title">Katso taustakuva, jonka löysin!</string>
+  <string name="miuishare_no_network">Verkkoyhteyttä ei voitu muodostaa.</string>
+  <string name="miuishare_please_retry">Tietoja ei voitu hakea. Tarkista verkkoasetuksesi ja yritä uudelleen.</string>
+  <string name="miuishare_publish">Lähetä</string>
+  <string name="miuishare_qzone_title">Qzone</string>
+  <string name="miuishare_share_done">Jaettiin onnistuneesti</string>
+  <string name="miuishare_share_editor_title">Jaa</string>
+  <string name="miuishare_share_fail">Jakaminen epäonnistui</string>
+  <string name="miuishare_timeline_title">Löydä seuraava taustakuvasi</string>
+  <string name="miuishare_title_more">Lisää</string>
+  <string name="miuishare_title_share">Jaa</string>
+  <string name="miuishare_wechat_timeline_title">WeChat Hetket</string>
+  <string name="miuishare_weibo_title">Weibo</string>
   <string name="multi_sim_ringtone_settings_dialog_message">Soittoääni asetetaan molemmille SIM-korteille.</string>
   <string name="multi_sim_ringtone_settings_dialog_ok">Selvä</string>
   <string name="multi_sim_ringtone_settings_dialog_remind_never">Älä näytä uudelleen</string>
@@ -198,6 +229,7 @@
   <string name="online_precust_scenery">Maisema</string>
   <string name="online_search_hint">Etsi verkkolähteitä</string>
   <string name="password_toggle_content_description">Vaihda salasanan näkyvyys</string>
+  <string name="pref_privacy_policy">Tietosuojakäytäntö</string>
   <string name="present_local_themes">Teemani</string>
   <string name="present_local_themes_subtitle">Mukauta laitteesi</string>
   <string name="present_official_themes">Meidän valinnat</string>
@@ -239,28 +271,33 @@
   <string name="resource_comment_3_star">3 Tähteä</string>
   <string name="resource_comment_4_star">4 Tähteä</string>
   <string name="resource_comment_5_star">5 Tähteä</string>
-  <string name="resource_comment_all_comments">Kaikki</string>
+  <string name="resource_comment_all_comments">Kaikki kommentit</string>
   <string name="resource_comment_average_score">Arvosana</string>
   <string name="resource_comment_bad_comments">Negatiivinen</string>
   <string name="resource_comment_current_version">Nykyinen versio</string>
   <string name="resource_comment_date">%2$02d.%1$02d.</string>
+  <string name="resource_comment_detainment_fail">Hylkää</string>
+  <string name="resource_comment_detainment_msg">Et ole lähettänyt kommenttiasi vielä. Hylätäänkö muutokset?</string>
+  <string name="resource_comment_detainment_success">Pysy</string>
   <string name="resource_comment_edit_comment">Lisää kommentteja</string>
   <string name="resource_comment_edit_comment_waiting">Tarkistetaan historiaa…</string>
-  <string name="resource_comment_edit_text_default">Kirjoita kommentti</string>
+  <string name="resource_comment_edit_text_default">Voit kertoa täällä meille mitä mieltä olet.</string>
+  <string name="resource_comment_edit_text_second_hint">Palautteesi on erittäin tärkeää meille.</string>
   <string name="resource_comment_edit_title">Kommentoi teemaa %1$s</string>
   <string name="resource_comment_entry_tips">Kommentit (%1$s)</string>
   <string name="resource_comment_expand_full_text">Laajenna tekstit▼</string>
   <string name="resource_comment_footer">Tyhjiä kommentteja ei näytetä.</string>
   <string name="resource_comment_good_comments">Positiivinen</string>
   <string name="resource_comment_invalid">Arvostele teema koskettamalla tähtiä</string>
+  <string name="resource_comment_limit">Ei niin nopeasti! Tule takaisin sen jälkeen, kun olet käyttänyt teemaa hieman kauemmin.</string>
   <string name="resource_comment_loading_list">Odota hetki…</string>
-  <string name="resource_comment_name_default">Käyttäjä %1$s</string>
+  <string name="resource_comment_name_default">Lempinimi</string>
   <string name="resource_comment_no_average_score">N/A</string>
-  <string name="resource_comment_no_comment">Ei kommentteja</string>
+  <string name="resource_comment_no_comment">Täällä ei ole vielä kommentteja. Sinä voit olla ensimmäinen kommentoija.</string>
+  <string name="resource_comment_over_limit">Kommenttisi on liian pitkä. Lyhennä sitä ja yritä uudelleen.</string>
   <string name="resource_comment_publish">Lähetä</string>
   <string name="resource_comment_rate">Arvosana:</string>
-  <string name="resource_comment_rating_star_tips">Arvostele koskemalla tähtiä:</string>
-  <string name="resource_comment_score_count">%1$s käyttäjää</string>
+  <string name="resource_comment_rating_star_tips">Arviosi</string>
   <string name="resource_comment_sending">Lähetetään kommenttia…</string>
   <string name="resource_comment_title">Teeman %1$s kommentit</string>
   <string name="resource_comment_upload_data_invalid">Syöttämäsi kommentti on väärin</string>
@@ -269,6 +306,7 @@
   <string name="resource_comment_upload_not_bought">Sinun täytyy asettaa teema ennen kuin voit kirjoittaa kommentteja siitä</string>
   <string name="resource_comment_upload_not_logined">Sinun täytyy kirjautua ensin</string>
   <string name="resource_comment_upload_success">Kommenttisi käydään lyhyesti läpi ja näytetään sen jälkeen.</string>
+  <string name="resource_comment_wonderful_comments">Suositut kommentit</string>
   <string name="resource_continue">Seuraava</string>
   <string name="resource_current_using_title">Nykyiset resurssit</string>
   <string name="resource_data_empty">Ei kohteita täällä.</string>
@@ -316,6 +354,7 @@
   <string name="resource_exchange_wrong_format_by_server">Koodia ei ole varmennettu. Varmista, että syötit sen oikein.</string>
   <string name="resource_expand_full_text">Laajenna</string>
   <string name="resource_failed_to_load_list">Teemojen lataaminen epäonnistui.</string>
+  <string name="resource_free_download">Lataa ilmaiseksi</string>
   <string name="resource_free_trial_15_days">Kokeile 15 päivää ilmaiseksi</string>
   <string name="resource_free_use_last_one_day">Kokeiluaikasi päättyy huomenna.</string>
   <string name="resource_get_auth_checking">Varmennetaan…</string>
@@ -429,14 +468,15 @@
   <string name="selected_resource_file_invalid">Valittua lähteen tiedostoa ei voi käyttää</string>
   <string name="set_color_ring_back_tone">Aseta mukautettu soittoääni</string>
   <string name="settings">Asetukset</string>
-  <string name="shortcut_add">Lisää kuvake</string>
+  <string name="shortcut_add">Lisää</string>
   <string name="shortcut_cancel">Ei kiitos</string>
-  <string name="shortcut_message">Lisää pikakuvake käynnistimeen!</string>
+  <string name="shortcut_message">Lisää Aloitusnäytön pikakuvake!</string>
   <string name="shortcut_show_tip">Älä näytä uudelleen</string>
   <string name="shortcut_title">Tykkäätkö taustakuvistamme?</string>
   <string name="show_free">Näytä ilmaiset %1$s</string>
   <string name="show_incompatible">Näytä yhteensopimattomat %1$s</string>
   <string name="system_precust">Esiasennettu</string>
+  <string name="tag_ad">Mainos</string>
   <string name="the_picture_is_not_support">Kuvaa ei tueta</string>
   <string name="the_picture_is_too_small">Kuva on liian pieni</string>
   <string name="theme_apply_audio_dialog_item_alarm">Hälytys</string>
@@ -491,7 +531,7 @@
   <string name="theme_import_from_sdcard">Tuo</string>
   <string name="theme_is_external_priority_storage">Tallenna SD-kortille</string>
   <string name="theme_is_external_priority_storage_summary">Teema-sovellus käynnistyy uudelleen heti tämän asetuksen asettamisen jälkeen.</string>
-  <string name="theme_multiple_button_title_customize">Kustomoi</string>
+  <string name="theme_multiple_button_title_customize">Mukauta</string>
   <string name="theme_no">Ei</string>
   <string name="theme_purchased_list_empty">Et ole ostanut yhtään teemaa.</string>
   <string name="theme_purchased_non_local">Online</string>
@@ -510,7 +550,8 @@
   <string name="theme_user_agreement_title">Käyttöehdot</string>
   <string name="theme_yes">Kyllä</string>
   <string name="third_party_pickers_activity_title">Lisää %1$s</string>
-  <string name="title_component">Kustomoi teema</string>
+  <string name="tips_theme_gate_transfer_fail">Tätä sivua ei voitu avata. Odota minuutti tai kaksi ja yritä uudelleen.</string>
+  <string name="title_component">Mukauta teema</string>
   <string name="title_my_audio_resource">Soittoääneni</string>
   <string name="title_my_miwallpaper_resource">Live taustakuvani</string>
   <string name="title_my_miwallpaper_video_file_resource">Videotaustakuvani</string>
@@ -535,7 +576,7 @@
   <string name="using_theme_has_update_tips">Päivitys on saatavilla tälle teemalle.</string>
   <string name="using_theme_next_automatic_update">Automaattiset päivitykset</string>
   <string name="using_theme_next_automatic_update_summary">Päivitä ladatut teemat automaattisesti Wi-Fi-yhteydellä, kun näyttö on lukittu</string>
-  <string name="using_theme_show_ad">Näytä mainoksia</string>
+  <string name="using_theme_show_ad">Suositukset</string>
   <string name="video_audio_apply_success">Määritettiin video äänellä onnistuneesti</string>
   <string name="video_data_tips_message">Mobiilidatan käyttäminen voi aiheuttaa lisäkustannuksia. Jatketaanko siitä huolimatta?</string>
   <string name="video_data_tips_title">Tiedonsiirtovaroitus</string>
