--- a/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
@@ -988,6 +988,7 @@ Muista, että lataamasi tiedostot ja lisäämäsi kirjanmerkin silti tallennetaa
   <string name="pref_privacy_enable_geolocation_summary">Salli selaimen pyytää sijaintitietojesi käyttöoikeutta</string>
   <string name="pref_privacy_formdata_title">Lomakkeen tiedot</string>
   <string name="pref_privacy_location_title">Sijainti</string>
+  <string name="pref_privacy_policy">Tietosuojakäytäntö</string>
   <string name="pref_privacy_security_title">Tietosuoja ja turvallisuus</string>
   <string name="pref_save_bandwidth_mode_title">Pienennä datan käyttöä</string>
   <string name="pref_security_accept_cookies">Salli evästeet</string>
