--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
@@ -32,6 +32,7 @@
   <string name="timer_cancel_hint">Lopeta</string>
   <string name="timer_cancel_timer">Peruuta ajastin</string>
   <string name="timer_continue_timer">Jatka ajastinta</string>
+  <string name="timer_created">Ajastin luotiin</string>
   <string name="timer_end_time">Ajastin pysähtyy klo %s</string>
   <string name="timer_end_time_format">"d. MMMM'ta' HH:mm"</string>
   <string name="timer_end_time_format_today">HH:mm</string>
@@ -105,6 +106,7 @@
   <string name="edit_systemtime">Muokkaa järjestelmän aikaa</string>
   <string name="elapsed_time_format">+%s</string>
   <string name="every_day">Joka päivä</string>
+  <string name="expired_timers_dismissed">Ajastin hylättiin</string>
   <string name="force_touch_add_alarm">Lisää hälytys</string>
   <string name="force_touch_enter_stopwatch">Sekuntikello</string>
   <string name="force_touch_enter_timer">Ajastin</string>
@@ -116,6 +118,7 @@
   <string name="install_weather_app_error">Sovelluksen lataaminen epäonnistui.</string>
   <string name="install_weather_app_loading">Odota hetki…</string>
   <string name="invalid_time">Virheellinen aika: %3$s %1$d: %2$d</string>
+  <string name="invalid_timer_length">Virheellinen ajastimen pituus</string>
   <string name="keep_screen_on">Pidä näyttö päällä</string>
   <string name="label">Aseta nimike</string>
   <string name="label_pref_summary">Nimeä tämä hälytys</string>
@@ -161,8 +164,9 @@
   <string name="never">Kerran</string>
   <string name="oneshot_alarm">Poista hälytyksen jälkeen</string>
   <string name="open_keep_screen">Näyttö pidetään päällä</string>
+  <string name="other_category_title">Muu</string>
   <string name="pause">Tauko</string>
-  <string name="percentage_sign">%</string>
+  <string name="privacy_policy">Tietosuojakäytäntö</string>
   <string name="remind_ringtone">Soittoääni</string>
   <string name="reset">Nollaa</string>
   <string name="revert">Palauta</string>
