--- a/Finnish/main/MiuiCompass.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCompass.apk/res/values-fi-rFI/strings.xml
@@ -55,6 +55,8 @@
   <string name="mobiledata_alert_dialog_title">Tiedonsiirtovaroitus</string>
   <string name="open_perm_msg">Kompassi tarvitsee sijaintitiedon ja kameran käyttöoikeuden. Tämä on välttämätöntä koordinaattien määrittämiseksi ja live-esikatselun näyttämiseksi. Sallitko?</string>
   <string name="open_perm_title">Käyttöoikeuksia vaaditaan</string>
+  <string name="preference_other">Muu</string>
+  <string name="preference_privacy_title">Tietosuojakäytäntö</string>
   <string name="pressure">%.1f</string>
   <string name="pressure_title">Paine</string>
   <string name="pressure_unit">hPa</string>
