--- a/Finnish/main/MiuiHome.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiHome.apk/res/values-fi-rFI/strings.xml
@@ -336,6 +336,7 @@
   <string name="uninstall_xspace_dialog_title_format">Poistetaanko kaksois \"%s\"?</string>
   <string name="unknown_artist_name">Tuntematon artisti</string>
   <string name="unnamed_folder_name">Kansio</string>
+  <string name="use_theme_screen_cells_title">Salli teeman korvata näytön ulkoasu</string>
   <string name="wallpaper">Taustakuva</string>
   <string name="wallpaper_auto_change_title">Lukitusnäyttö</string>
   <string name="wallpaper_failed_message">Taustakuvaa ei voi asettaa</string>
