--- a/Finnish/main/TeleService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/TeleService.apk/res/values-fi-rFI/strings.xml
@@ -1302,6 +1302,7 @@ Laitteesi lukitaan automaattisesti jos yrityksesi menee vielä väärin"</string
   <string name="preferred_network_type_title">Ensisijaisen verkon tyyppi</string>
   <string name="preferred_phone_account">Ensisijainen soittotili</string>
   <string name="preferred_wificall_title">Verkkoasetukset</string>
+  <string name="privacy_policy_title">Tietosuojakäytäntö</string>
   <string name="private_num">Salainen numero</string>
   <string name="progress_dialog_exiting_ecm">Poistutaan hätäpuhelujen takaisinsoittotilasta</string>
   <string name="prompt_to_turnoff_volte_when_failed">VoLTE-palvelut ei ole käytettävissä. Poista VoLTE käytöstä soittaaksesi.</string>
